using UnityEngine;

public static class AnimationStrings
{
}

public static class CharacterAnimationStrings
{
    public const string ANIM_HOUSE_DANCING = "House Dancing";
    public const string ANIM_SWING_DANCING = "Swing Dancing";
    public const string ANIM_TUT_HIP_HOP_DANCE = "Tut Hip Hop Dance";
    public const string ANIM_CHARGE = "Charge";
    public const string ANIM_CLAPPING = "Clapping";
    public const string ANIM_EXCITED = "Excited";
    public const string ANIM_SAD_IDLE = "Sad Idle";
    public const string ANIM_TERRIFIED = "Terrified";
    public const string ANIM_WHATEVER_GESTURE = "Whatever Gesture";
    public const string ANIM_QUICK_FORMAL_BOW = "Quick Formal Bow";
    public const string ANIM_SALUTE = "Salute";
    public const string ANIM_SHAKING_HANDS = "Shaking Hands";
    public const string ANIM_STANDING_GREETING = "Standing Greeting";
    public const string ANIM_IDLE = "Idle";
    public const string ANIM_RUNNING = "Running";
    public const string ANIM_WALKING = "Walking";
    public const string ANIM_SITTING = "isSitting";
}